Update source code with spring 3.3.2 and jdk 21